# SentinelNet

./: .gitignore  CMakeLists.txt  Connect.html  README.md  index.html  resources.rc  style.css
api/: report.js  status.js
include/: cli.h  detection.h  logger.h  network_utils.h  packet_monitor.h  scanner.h  server.h  simulation.h  tunnel.h
src/: cli.cpp  detection.cpp  logger.cpp  main.cpp  network_utils.cpp  packet_monitor.cpp  scanner.cpp  server.cpp  simulation.cpp  tunnel.cpp
web/: dashboard.html  hack.html  hack.js  remote.html  script.js  style.css
